# minimal_repro

backend/: Cargo.lock.actix_ecosystem  Cargo.lock.critical  Cargo.lock.no_actors  Cargo.lock.no_async_extras  Cargo.lock.no_database  Cargo.lock.no_misc  Cargo.lock.no_proc_macro  Cargo.lock.no_suspects  Cargo.lock.safe  Cargo.lock.ultra_minimal  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  analyze_current.rb  compose.yaml  find_critical.rb  find_version_constraints.rb  narrow_down.rb  remove_others.rb  safe_removal.rb  test_without_actors.rb
backend/common/: Cargo.toml
backend/common/src/: constants.rs  types.rs
backend/graphql/: Cargo.toml
backend/graphql/src/: lib.rs  main.rs  metadata.rs  mutation.rs  query.rs
backend/graphql/src/custom_sql_query/: common.rs  get_j_reit_buildings.rs  get_j_reit_corporations.rs  mod.rs  search_j_reit_buildings.rs  search_transactions.rs  utils.rs
backend/graphql/src/dataloader/: j_reit_appraisal_histories.rs  j_reit_appraisals.rs  j_reit_buildings.rs  j_reit_buildings_by_office_building_id.rs  j_reit_buildings_per_corporation.rs  j_reit_cap_rate_histories.rs  j_reit_corporations.rs  j_reit_financials.rs  j_reit_mizuho_building_id.rs  j_reit_mizuho_press_releases.rs  j_reit_transactions.rs  mod.rs
backend/graphql/src/types/: feedbacks.rs  free_trials.rs  ids.rs  j_reit_corporations.rs  j_reit_financials.rs  j_reit_id_mapping.rs  mod.rs  saved_building_search_params.rs  saved_transaction_search_params.rs  utils.rs
backend/graphql/src/types/common/: mod.rs  search.rs  sort_and_pagination.rs
backend/graphql/src/types/j_reit_buildings/: j_reit_appraisal_histories.rs  j_reit_appraisals.rs  j_reit_cap_rate_histories.rs  j_reit_press_releases.rs  j_reit_transactions.rs  mod.rs  search.rs  sort_and_pagination.rs
backend/graphql/src/types/j_reit_buildings/j_reit_transactions/: search.rs  sort_and_pagination.rs
backend/graphql/src/utils/: id_converter.rs  mod.rs  uuid.rs
backend/graphql/tests/: common.rs  test_create_building_search_params.rs  test_create_transaction_search_params.rs  test_delete_building_search_params.rs  test_delete_transaction_search_params.rs  test_free_trial_query.rs  test_j_reit_appraisal_histories.rs  test_j_reit_building_by_office_building_ids.rs  test_j_reit_buildings.rs  test_j_reit_buildings_per_corporation.rs  test_j_reit_cap_rate_histories.rs  test_j_reit_cap_rate_histories_by_building_and_corporation.rs  test_j_reit_corporations_query.rs  test_j_reit_financials.rs  test_j_reit_press_releases.rs  test_j_reit_transactions.rs  test_mutation.rs  test_saved_building_search_params.rs  test_saved_transaction_search_params.rs  test_search_j_reit_buildings_per_corporation.rs  test_search_transactions.rs  test_update_building_search_params.rs  test_update_transaction_search_params.rs
backend/graphql/tests/utils/: mod.rs
backend/internal-api/: Cargo.toml
backend/rest/: Cargo.toml
backend/rest/src/: .graphqlrc.yml  api.rs  data_hub_client.rs  formatter.rs  lib.rs  roles.rs  types.rs
backend/rest/src/api/: buildings.rs  health.rs
backend/rest/src/api/buildings/: export_csv_v2.rs  export_excel_v2.rs
backend/rest/src/queries/: JReitBuildingsForCsv.graphql  JReitBuildingsForExcel.graphql
backend/rest/src/schemas/data-hub/: schema.gql
backend/rest/src/types/: asset_type.rs
backend/rest/tests/: common.rs  test_export_csv_v2.rs  test_export_excel_v2.rs
backend/sql-entities/: Cargo.toml
backend/sql-entities/src/: lib.rs
backend/sql-entities/src/entities/: j_reit_buildings_ext.rs  mod.rs
backend/src/: main.rs
