[package]
name = "minimal_repro"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
async-graphql-actix-web.workspace = true
sea-orm.workspace = true
graphql = { path = "./graphql" }

[workspace]
members = ["sql-entities", "graphql", "rest"]

[workspace.dependencies]
actix-web = "4.4"
async-graphql = "6.0"
async-graphql-actix-web = "6.0"
async-trait = "0.1"
sea-orm = "1.1.7"
sea-query = "0.32.2"
serde = "1.0"
serde_json = "1.0"
tokio = "1.43.0"
chrono = "0.4.39"
sql-entities = { path = "./sql-entities" }
