[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
actix-web.workspace = true
async-graphql-actix-web.workspace = true
graphql.workspace = true
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "debug-print",
] }
anyhow.workspace = true
rest.workspace = true
sentry.workspace = true
sentry-actix.workspace = true
serde_json.workspace = true
# auth0-jwt-validator.workspace = true
# opentelemetry-bootstrap.workspace = true
actix-web-httpauth.workspace = true
tracing = { workspace = true }
log.workspace = true

[workspace]
members = ["sql-entities", "graphql", "rest", "internal-api", "common"]

[workspace.dependencies]
actix-web = "4.4"
async-graphql = "6.0"
async-graphql-actix-web = "6.0"
async-trait = "0.1"
sea-orm = "1.1.7"
sea-query = "0.32.2"
serde = "1.0"
serde_json = "1.0"
tokio = "1.43.0"
reqwest = "0.12.12"
anyhow = "1.0.96"
graphql_client = "0.14.0"
csv = "1.3.1"
chrono = "0.4.39"
rust_xlsxwriter = "0.79.4"
regex = "1.11.1"
sentry = "0.34.0"
sentry-actix = "0.34.0"
jsonwebtoken = "9.3.1"
thiserror = "1.0.69"
url = "2.5.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web-httpauth = "0.8.2"
datadog-api-client = "0.6.0"
rand = "0.9"
pretty_assertions = "1.4.1"
log = "0.4"
uuid = "1.17.0"

common = { path = "./common" }
graphql = { path = "./graphql" }
sql-entities = { path = "./sql-entities" }
rest = { path = "./rest" }
# proto = { git = "https://github.com/estie-inc/otooshi.git" }
# auth0-jwt-validator = { git = "https://github.com/estie-inc/auth0-jwt-validator.git", tag = "v2.0" }
# opentelemetry-bootstrap = { git = "https://github.com/estie-inc/opentelemetry-bootstrap-rs", tag = "v1.0.1", features = ["sqlx","async_graphql","datadog","macros"] }

[workspace.lints.clippy]
unwrap_used = "deny"
print_stdout = "warn"

[profile.dev-ci]
inherits = "dev"
debug = 0
