[package]
name = "rest"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
graphql_client = { workspace = true, features = ["reqwest-blocking"] }
csv.workspace = true
chrono = { workspace = true, features = ["serde"] }
rust_xlsxwriter.workspace = true
regex.workspace = true
# auth0-jwt-validator.workspace = true
actix-web-httpauth.workspace = true
tracing.workspace = true
# proto.workspace = true
sea-orm.workspace = true
common.workspace = true
sql-entities.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
sea-orm = { workspace = true, features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
pretty_assertions.workspace = true

[lints]
workspace = true
